--- a/index.html
+++ b/index.html
@@ -12,19 +12,19 @@
 <body>
     <header><h1>Tic Tac Toe</h1></header>
     <div class="wrapper">
-        <div data-index="1" class="boxes"></div>
-        <div data-index="2" class="boxes"></div>
-        <div data-index="3" class="boxes"></div>
-        <div data-index="4" class="boxes"></div>
-        <div data-index="5" class="boxes"></div>
-        <div data-index="6" class="boxes"></div>
-        <div data-index="7" class="boxes"></div>
-        <div data-index="8" class="boxes"></div>
-        <div data-index="9" class="boxes"></div>
-        <div class="strike" ></div>        
+        <div data-index="1" class="one boxes"></div>
+        <div data-index="2" class="two boxes"></div>
+        <div data-index="3" class="three boxes"></div>
+        <div data-index="4" class="four boxes"></div>
+        <div data-index="5" class="five boxes"></div>
+        <div data-index="6" class="six boxes"></div>
+        <div data-index="7" class="seven boxes"></div>
+        <div data-index="8" class="eight boxes"></div>
+        <div data-index="9" class="nine boxes"></div>
+        <div class="strike"></div>        
     </div>
     <div class="game-over-area" class="hidden">
-    <h2 class="game-over-text">Winner is X</h2>
+    <h2 class="game-over-text">&nbsp;</h2>
     <button class="play-again">Play Again</button>
     </div>
     <script src="js/main.js"></script>
