--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 
 <body>
     <header><h1>Tic Tac Toe</h1></header>
+        <article class="leaderboard">
+            <h4>leaderboard</h4>
+        </article>
     <div class="wrapper">
         <div data-index="1" class="one boxes"></div>
         <div data-index="2" class="two boxes"></div>
@@ -23,6 +26,7 @@
         <div data-index="9" class="nine boxes"></div>
         <div class="strike"></div>        
     </div>
+
     <div class="game-over-area" class="hidden">
     <h2 class="game-over-text">&nbsp;</h2>
     <button class="play-again">Play Again</button>
