--- a/index.html
+++ b/index.html
@@ -10,11 +10,10 @@
 </head>
 
 <body>
-    <header><h1>Tic Tac Toe</h1></header>
-        <article class="leaderboard">
-            <h4>leaderboard</h4>
-        </article>
+    <header><h1><u>Tic Tac Toe</u></h1></header>
     <div class="wrapper">
+
+        
         <div data-index="1" class="one boxes"></div>
         <div data-index="2" class="two boxes"></div>
         <div data-index="3" class="three boxes"></div>
@@ -24,6 +23,8 @@
         <div data-index="7" class="seven boxes"></div>
         <div data-index="8" class="eight boxes"></div>
         <div data-index="9" class="nine boxes"></div>
+        <article class="userName"></article>
+        <article class="leaderboard"><u><h4>leaderboard</h4></u></article>
         <div class="strike"></div>        
     </div>
 
