--- a/index.html
+++ b/index.html
@@ -11,9 +11,7 @@
 
 <body>
     <header><h1><u>Tic Tac Toe</u></h1></header>
-    <div class="wrapper">
-
-        
+    <div class="wrapper">        
         <div data-index="1" class="one boxes"></div>
         <div data-index="2" class="two boxes"></div>
         <div data-index="3" class="three boxes"></div>
@@ -24,13 +22,16 @@
         <div data-index="8" class="eight boxes"></div>
         <div data-index="9" class="nine boxes"></div>
         <article class="userName"></article>
-        <article class="leaderboard"><u><h4>leaderboard</h4></u></article>
+        <article class="leaderboard"><u><h4>leaderboard</h4></u>
+        <h5>Wins:</h5>
+        <h6>Player X =</h6>
+        <h6>Player O =</h6></article>
         <div class="strike"></div>        
     </div>
 
     <div class="game-over-area" class="hidden">
     <h2 class="game-over-text">&nbsp;</h2>
-    <button class="play-again">Play Again</button>
+    <button class="play-again">-Play Again-</button>
     </div>
     <script src="js/main.js"></script>
 </body>
