done without AI

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
         <article class="userName"></article>
         <article class="leaderboard"><u><h4>leaderboard</h4></u>
         <h5>Wins:</h5>
-        <h6>Player X =</h6>
-        <h6>Player O =</h6></article>
+        <h6 class="scoreboard-X">Player X =</h6>
+        <h6 class="scoreboard-O">Player O =</h6></article>
         <div class="strike"></div>        
     </div>
 
