--- a/index.html
+++ b/index.html
@@ -13,11 +13,8 @@
     <header><h1><u>Tic Tac Toe</u></h1></header>
       <div>
     <label for="example">Name:</label>
-    <input id="example" type="text" name="text" />
-  </div>
-  <div>
-    <input type="submit" value="Send" />
-  </div>
+    <input type="text" class="input-area">
+    <button class="submit">Submit</button><br><br>
     <div class="wrapper">        
         <div data-index="1" class="one boxes"></div>
         <div data-index="2" class="two boxes"></div>
@@ -31,7 +28,7 @@
         <article class="userName"></article>
         <article class="leaderboard"><u><h4>leaderboard</h4></u>
         <h5>Wins:</h5>
-        <h6 class="scoreboard-X"><input class="input" type="text"> = <span class="wonX">0</span></h6>
+        <h6 class="scoreboard-X"><span class="player">Player</span> = <span class="wonX">0</span></h6>
         <h6 class="scoreboard-O">Computer = <span class="wonO">0</span></h6></article>
         <div class="strike"></div>        
     </div>
