--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <button class="submit">Submit:</button>
                 </div>
             </h5>
-            <h6 class="scoreboard-X"><span class="player">Player</span> = <span class="wonX">0</span></h6>
+            <h6 class="scoreboard-X"><span class="player">Playerr</span> = <span class="wonX">0</span></h6>
             <h6 class="scoreboard-O">Computer = <span class="wonO">0</span></h6>
         </article>
         <div class="strike"></div>
